syntax = "proto3";
package mantrachain.mns.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "mantrachain/mns/v1/params.proto";
import "mantrachain/mns/v1/domain.proto";
import "mantrachain/mns/v1/domain_name.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/LimeChain/mantrachain/x/mns/types";

// Query defines the gRPC querier service.
service Query {
	// Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/mantrachain/mns/v1/params";
  }
	
  // Queries a Domain by name.
	rpc Domain(QueryGetDomainRequest) returns (QueryGetDomainResponse) {
		option (google.api.http).get = "/mantrachain/mns/v1/domain/{domain}";
	}

	// Queries a list of Domain items.
	rpc DomainAll(QueryAllDomainRequest) returns (QueryAllDomainResponse) {
		option (google.api.http).get = "/mantrachain/mns/v1/domain";
	}

// Queries a DomainName by index.
	rpc DomainName(QueryGetDomainNameRequest) returns (QueryGetDomainNameResponse) {
		option (google.api.http).get = "/mantrachain/mns/v1/domain/{domain}/domain_name/{domain_name}";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetDomainRequest {
	  string domain = 1;
}

message QueryGetDomainResponse {
	Domain domain = 1 [(gogoproto.nullable) = false];
}

message QueryAllDomainRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllDomainResponse {
	repeated Domain domain = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetDomainNameRequest {
	string domain = 1;
	string domain_name = 2;
}

message QueryGetDomainNameResponse {
	DomainName domain_name = 1 [(gogoproto.nullable) = false];
}

// this line is used by starport scaffolding # 3
